--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,9 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "biopython>=1.85",
     "cirq>=1.5.0",
+    "ipykernel>=6.29.5",
     "keras>=3.10.0",
     "matplotlib>=3.10.3",
     "pandas>=2.3.0",
