--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.12"
 dependencies = [
     "biopython>=1.85",
     "cirq>=1.5.0",
+    "flask>=3.1.1",
     "ipykernel>=6.29.5",
     "keras>=3.10.0",
     "matplotlib>=3.10.3",
