--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,13 +6,16 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "biopython>=1.85",
-    "cirq>=1.5.0",
     "flask>=3.1.1",
+    "gradio>=5.39.0",
     "ipykernel>=6.29.5",
     "keras>=3.10.0",
     "matplotlib>=3.10.3",
     "pandas>=2.3.0",
+    "qiskit>=2.1.1",
     "scikit-learn>=1.7.0",
+    "stable-baselines3>=2.7.0",
     "tensorflow>=2.19.0",
     "torch>=2.7.1",
+    "transformers>=4.54.1",
 ]
