--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,8 +6,11 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "biopython>=1.85",
+    "dotenv>=0.9.9",
     "flask>=3.1.1",
+    "google-genai>=1.28.0",
     "gradio>=5.39.0",
+    "groq>=0.30.0",
     "ipykernel>=6.29.5",
     "keras>=3.10.0",
     "matplotlib>=3.10.3",
