--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "gradio>=5.39.0",
     "groq>=0.30.0",
     "ipykernel>=6.29.5",
+    "ipython>=9.3.0",
     "keras>=3.10.0",
     "matplotlib>=3.10.3",
     "pandas>=2.3.0",
