--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ dependencies = [
     "matplotlib>=3.10.3",
     "pandas>=2.3.0",
     "qiskit>=2.1.1",
+    "rich>=14.0.0",
     "scikit-learn>=1.7.0",
     "stable-baselines3>=2.7.0",
     "tensorflow>=2.19.0",
