--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ dependencies = [
     "google-genai>=1.28.0",
     "gradio>=5.39.0",
     "groq>=0.30.0",
-    "gymnasium[classic-control]>=1.2.0",
+    "gymnasium[box2d,classic-control]>=1.2.0",
     "ipykernel>=6.29.5",
     "ipython>=9.3.0",
     "keras>=3.10.0",
@@ -23,6 +23,7 @@ dependencies = [
     "rich>=14.0.0",
     "scikit-learn>=1.7.0",
     "stable-baselines3>=2.7.0",
+    "swig>=4.3.1",
     "tensorflow>=2.19.0",
     "torch>=2.7.1",
     "transformers>=4.54.1",
